--- a/recipes/main.css
+++ b/recipes/main.css
@@ -2,11 +2,16 @@
 	#root {
 		display: flex;
 		flex-flow: row-reverse;
-		justify-content: space-between;
+		/* justify-content: space-between; */
+		justify-content: left;
 	}
 
-	article {
+	#costsSaved, #ingredients {
 		width: 340px;
+	}
+
+	#costsSaved {
+		margin-left: 25px;
 	}
 }
 
@@ -17,7 +22,7 @@
 		align-items: center;
 	}
 
-	article {
+	#costsSaved, #ingredients {
 		width: 90%;
 	}
 }
@@ -25,4 +30,13 @@
 article {	
 	margin-top: 20px;
 	/* margin-bottom: 40px; */
+}
+
+#costs {
+	display: flex;
+	flex-flow: column;
+}
+
+h3 {
+	margin: 6px;
 }
